--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon" />
     <title>Messenger</title>
-    <link href="https://unpkg.com/ionicons@4.5.0/dist/css/ionicons.min.css" rel="stylesheet">
 </head>
 <body>
 <div id='root'></div>
-<script src="./react-app.js"></script>
+    <script src="./react-app.js"></script>
 </body>
 </html>
